--- a/work/project-2.html
+++ b/work/project-2.html
@@ -38,7 +38,9 @@
   <div class="section">
     <div class="container">
       <div class="w-layout-grid work-grid">
-        <div id="w-node-cf732a68-502a-c15f-b47a-2a9f0f771652-77c0500c" class="label">letsdofit</div>
+        <div id="w-node-cf732a68-502a-c15f-b47a-2a9f0f771652-77c0500c" class="about-head-text-wrap">
+          <div class="label">letsdofit</div>
+        </div>
         <p class="paragraph">full website design and build for a concept team collaboration platform. I have built the website and the blog in Webflow and deployed it with github and netlify</p>
         <div id="w-node-_1e4ce523-7ab7-265c-7727-0136272e0127-77c0500c" class="div-block-4">
           <a href="https://letsdofit.de/" target="_blank" class="link">visit live site →</a>
