--- a/work/project-2.html
+++ b/work/project-2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Jun 06 2021 21:30:51 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Jun 06 2021 22:20:31 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60bbe47be099244077c0500c" data-wf-site="60bbe47be099245f72c05001">
 <head>
   <meta charset="utf-8">
@@ -38,7 +38,9 @@
   <div class="section">
     <div class="container">
       <div class="w-layout-grid work-grid">
-        <div id="w-node-cf732a68-502a-c15f-b47a-2a9f0f771652-77c0500c" class="label">letsdofit</div>
+        <div id="w-node-_7921e5d6-bdb4-a55e-a743-d89b9be05327-77c0500c" class="about-head-text-wrap">
+          <div class="label">letsdofit</div>
+        </div>
         <p class="paragraph">full website design and build for a concept team collaboration platform. I have built the website and the blog in Webflow and deployed it with github and netlify</p>
         <div id="w-node-_1e4ce523-7ab7-265c-7727-0136272e0127-77c0500c" class="div-block-4">
           <a href="https://letsdofit.de/" target="_blank" class="link">visit live site →</a>
