--- a/work/project-3.html
+++ b/work/project-3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Jun 06 2021 21:30:51 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sun Jun 06 2021 22:20:31 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60bbe47be099241da8c0500d" data-wf-site="60bbe47be099245f72c05001">
 <head>
   <meta charset="utf-8">
@@ -38,7 +38,9 @@
   <div class="section">
     <div class="container">
       <div class="w-layout-grid work-grid">
-        <div id="w-node-_5bc1d8e4-5071-6868-4f75-32d59db7d6be-a8c0500d" class="label">healthy journey</div>
+        <div id="w-node-e80ff6d1-9972-d8b3-3652-c9379a9b2b0b-a8c0500d" class="about-head-text-wrap">
+          <div class="label">healthy journey</div>
+        </div>
         <p class="paragraph">This is a homepage design and build for a concept project -a nutrition coach website. I designed the page first then built a responsive web page using Webflow.</p>
         <div id="w-node-_5bc1d8e4-5071-6868-4f75-32d59db7d6c2-a8c0500d" class="div-block-4">
           <a href="https://suelo36th.github.io/healthyjourney/" target="_blank" class="link">visit live site →</a>
