--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link href="css/suley-ux-design.webflow.css" rel="stylesheet" type="text/css">
   <style>@media (min-width:992px) {html.w-mod-js:not(.w-mod-ix) [data-w-id="ead17e2c-aa96-dcf3-ebf6-30e6d1a0dcc9"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="103b50f5-1562-a0ff-f196-f13f12566aa1"] {opacity:0;}html.w-mod-js:not(.w-mod-ix) [data-w-id="c476415d-d310-947f-c570-1412a3a2fddb"] {opacity:0;}}</style>
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Work Sans:200,300,regular,500,600,700,800,900"]  }});</script>
+  <script type="text/javascript">WebFont.load({  google: {    families: ["Work Sans:200,300,regular,500,600,700,800,900"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
