--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Jun 06 2021 22:20:31 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Jun 07 2021 05:45:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60bbe47be09924427ec05009" data-wf-site="60bbe47be099245f72c05001">
 <head>
   <meta charset="utf-8">
@@ -29,7 +29,7 @@
               <a href="index.html" class="navigation-item w-nav-link">work</a>
               <a href="about.html" aria-current="page" class="navigation-item w-nav-link w--current">About</a>
             </nav>
-            <div class="menu-button w-nav-button"><img src="images/menu-icon_1menu-icon.png" width="22" alt="" class="menu-icon"></div>
+            <div class="menu-button w-nav-button"><img src="images/15724930641578981536-48.png" width="22" alt="" class="menu-icon"></div>
           </div>
         </div>
       </div>
@@ -40,7 +40,7 @@
       <div class="w-layout-grid about-intro-grid w-clearfix">
         <div id="w-node-_9b2922ad-09b1-aebb-0430-7dee623c62c1-7ec05009" class="about-head-text-wrap">
           <div class="label cc-about-light">about me</div>
-        </div><img src="images/profilepic-min.jpg" id="w-node-_9b2922ad-09b1-aebb-0430-7dee623c62c8-7ec05009" sizes="(max-width: 767px) 100vw, (max-width: 991px) 40vw, 100vw" srcset="images/profilepic-min.jpg 1080w, images/profilepic-min.jpg 1600w, images/profilepic-min.jpg 2000w" alt="picture of suleyman" class="profilepicture">
+        </div><img src="images/profilepic-min.jpg" id="w-node-_9b2922ad-09b1-aebb-0430-7dee623c62c8-7ec05009" sizes="(max-width: 767px) 100vw, (max-width: 991px) 40vw, 100vw" srcset="images/profilepic-min-p-1080.jpeg 1080w, images/profilepic-min-p-1600.jpeg 1600w, images/profilepic-min.jpg 2000w" alt="picture of suleyman" class="profilepicture">
         <p id="w-node-_9b2922ad-09b1-aebb-0430-7dee623c62c6-7ec05009" class="paragraph">hey there! my name is suleyman. I live art and breathe design. Creating useful solutions with emotions and esthetics.<br>I&#x27;ve been lucky to have a multidisciplinary education and explore many fields of design and art; having these experiences has enriched my practice as a designer. I&#x27;m constantly developing my skills and challenging my own perspectives. Design work is always exciting to me because I think that thoughtful design has the power to change lives for the better, make things work easier and more valuable. Design makes the world more beautiful.</p>
         <div id="w-node-_3126bdf7-175b-7bf3-9fa2-3b62828274f4-7ec05009" class="about-head-text-wrap">
           <div class="label cc-about-light">say hi!</div>
@@ -75,8 +75,8 @@
       <div class="contact w-clearfix">
         <div class="contact-headline">
           <h3 class="footer-heading">say hi!<br></h3>
-          <a href="mailto:suleyman.cihangir79@gmail.com?subject=ux%20portfolio%20mail" class="link">suleyman.cihangir79@gmail.com</a>
-          <a href="https://www.linkedin.com/in/suleyman-cihangir" target="_blank" class="link">LinkedIn</a>
+          <a href="mailto:suleyman.cihangir79@gmail.com?subject=ux%20portfolio%20mail" class="link footer-links">suleyman.cihangir79@gmail.com</a>
+          <a href="https://www.linkedin.com/in/suleyman-cihangir" target="_blank" class="link footer-links">LinkedIn</a>
         </div>
         <div class="contact-column-left contact">
           <div class="div-block w-clearfix">
