--- a/work/project-1.html
+++ b/work/project-1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sun Jun 06 2021 22:20:31 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Mon Jun 07 2021 05:45:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60bbe47be09924b030c0500a" data-wf-site="60bbe47be099245f72c05001">
 <head>
   <meta charset="utf-8">
@@ -29,7 +29,7 @@
               <a href="../index.html" class="navigation-item w-nav-link">work</a>
               <a href="../about.html" class="navigation-item w-nav-link">About</a>
             </nav>
-            <div class="menu-button w-nav-button"><img src="../images/menu-icon_1menu-icon.png" width="22" alt="" class="menu-icon"></div>
+            <div class="menu-button w-nav-button"><img src="../images/15724930641578981536-48.png" width="22" alt="" class="menu-icon"></div>
           </div>
         </div>
       </div>
@@ -51,8 +51,8 @@
       <div class="contact w-clearfix">
         <div class="contact-headline">
           <h3 class="footer-heading">say hi!<br></h3>
-          <a href="mailto:suleyman.cihangir79@gmail.com?subject=ux%20portfolio%20mail" class="link">suleyman.cihangir79@gmail.com</a>
-          <a href="https://www.linkedin.com/in/suleyman-cihangir" target="_blank" class="link">LinkedIn</a>
+          <a href="mailto:suleyman.cihangir79@gmail.com?subject=ux%20portfolio%20mail" class="link footer-links">suleyman.cihangir79@gmail.com</a>
+          <a href="https://www.linkedin.com/in/suleyman-cihangir" target="_blank" class="link footer-links">LinkedIn</a>
         </div>
         <div class="contact-column-left contact">
           <div class="div-block w-clearfix">
