edit about me text

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div class="section">
     <div class="container">
       <div class="intro-wrap">
-        <h1 class="heading">hi! i´m suleyman, a digital designer and web developer.<br></h1>
+        <h1 class="heading">hi! i´m suleyman, a ux designer and web developer.<br></h1>
         <p class="paragraph">I design and build beautiful websites around the globe.</p>
       </div>
     </div>
