--- a/work/project-3.html
+++ b/work/project-3.html
@@ -48,7 +48,7 @@
         </div>
         <p class="paragraph">This is a homepage design and build for a concept project -a nutrition coach website. I designed the page first then built a responsive web page using Webflow.</p>
         <div id="w-node-_5bc1d8e4-5071-6868-4f75-32d59db7d6c2-a8c0500d" class="div-block-4">
-          <a href="https://suelo36th.github.io/healthyjourney/" target="_blank" class="link">visit live site →</a>
+          <a href="https://healthyjourneyproject.webflow.io/" target="_blank" class="link">visit live site →</a>
         </div><img src="../images/screencapture-healthyjourneyproject-webflow-io-2021-05-30-20_05_56-min-min.png" loading="lazy" id="w-node-_5bc1d8e4-5071-6868-4f75-32d59db7d6c5-a8c0500d" alt="picture of the website healthy journey" class="website-image">
       </div>
     </div>
