--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     <div class="container">
       <div class="intro-wrap">
         <h1 class="heading">hi! i´m suleyman, a ux designer and web developer.<br></h1>
-        <p class="paragraph">I design and build beautiful websites around the globe.</p>
+        <p class="paragraph">Whether you want to present your company, your services and products or create much more - i can help!
+</p>
       </div>
     </div>
   </div>
