Update Mail Adress

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div class="contact w-clearfix">
         <div class="contact-headline">
           <h3 class="footer-heading">say hi!<br></h3>
-          <a href="mailto:suleyman.cihangir79@gmail.com?subject=ux%20portfolio%20mail" class="link footer-links">suleyman.cihangir79@gmail.com</a>
+          <a href="mailto:suleymanxcihangir@gmail.com?subject=ux%20portfolio%20mail" class="link footer-links">suleymanxcihangir@gmail.com</a>
           <a href="https://www.linkedin.com/in/suleyman-cihangir" target="_blank" class="link footer-links">LinkedIn</a>
         </div>
         <div class="contact-column-left contact">
