--- a/about.html
+++ b/about.html
@@ -61,15 +61,15 @@
         <div id="w-node-_439ee3de-4f93-8666-3c5c-0500da844d5b-7ec05009" class="w-layout-grid work-experience-grid">
           <div id="w-node-_439ee3de-4f93-8666-3c5c-0500da844d5c-7ec05009" class="work-position-wrap w-clearfix">
             <div class="position-name-text">skills</div>
-            <div class="paragraph-tiny cc-paragraph-tiny-light">illustration<br>graphic design<br>calligraphy<br>photography<br>wireframing<br>web design<br></div>
+            <div class="paragraph-tiny cc-paragraph-tiny-light">illustration<br>graphic design<br>ux design<br>wireframing<br>prototyping<br>ux research<br>web design<br></div>
           </div>
           <div id="w-node-_439ee3de-4f93-8666-3c5c-0500da844d64-7ec05009" class="work-position-wrap w-clearfix">
             <div class="position-name-text">tools</div>
-            <div class="paragraph-tiny cc-paragraph-tiny-light">photoshop<br>illustrator<br>corel<br>webflow<br>xd<br>figma<br>‍<br></div>
+            <div class="paragraph-tiny cc-paragraph-tiny-light">photoshop<br>illustrator<br>git<br>webflow<br>xd<br>figma<br>‍<br></div>
           </div>
           <div id="w-node-_439ee3de-4f93-8666-3c5c-0500da844d6c-7ec05009" class="work-position-wrap w-clearfix">
             <div class="position-name-text">languages</div>
-            <div class="paragraph-tiny cc-paragraph-tiny-light">html<br>css<br>javascript<br>c<br></div>
+            <div class="paragraph-tiny cc-paragraph-tiny-light">html<br>css<br>javascript<br></div>
           </div>
         </div>
       </div>
