--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
           </div>
           <div id="w-node-_439ee3de-4f93-8666-3c5c-0500da844d64-7ec05009" class="work-position-wrap w-clearfix">
             <div class="position-name-text">tools</div>
-            <div class="paragraph-tiny cc-paragraph-tiny-light">adobe creative suite<br>git<br>webflow<br><br>figma<br>‍</div>
+            <div class="paragraph-tiny cc-paragraph-tiny-light">adobe cs<br>git<br>webflow<br>figma<br>‍</div>
           </div>
           <div id="w-node-_439ee3de-4f93-8666-3c5c-0500da844d6c-7ec05009" class="work-position-wrap w-clearfix">
             <div class="position-name-text">languages</div>
