--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
             hi! i'm suleyman, a ux designer and web developer.<br />
           </h1>
           <p class="paragraph">
-            i design and build beautiful websites with, useful and meaningful
-            user experience
+            i design and build beautiful websites with best user experience.
           </p>
         </div>
       </div>
