--- a/work/ux-case-study-1.html
+++ b/work/ux-case-study-1.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
 <!--  Last Published: Tue Jan 11 2022 20:21:32 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="60bbe47be099244077c0500c" data-wf-site="60bbe47be099245f72c05001">
+<html data-wf-page="61ddd191082dec76f96edeff" data-wf-site="60bbe47be099245f72c05001">
 <head>
   <meta charset="utf-8">
-  <title>Project 2</title>
+  <title>UX CASE STUDY 1</title>
   <meta content="web design project" name="description">
-  <meta content="Project 2" property="og:title">
+  <meta content="UX CASE STUDY 1" property="og:title">
   <meta content="web design project" property="og:description">
-  <meta content="Project 2" property="twitter:title">
+  <meta content="UX CASE STUDY 1" property="twitter:title">
   <meta content="web design project" property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
@@ -42,14 +42,15 @@
   </div>
   <div class="section">
     <div class="container">
-      <div class="w-layout-grid work-grid">
-        <div id="w-node-_7921e5d6-bdb4-a55e-a743-d89b9be05327-77c0500c" class="about-head-text-wrap">
-          <div class="label">letsdofit</div>
+      <div class="w-layout-grid case-studies">
+        <div id="w-node-_02d24f60-103e-431d-f1f8-e5989e89b586-f96edeff" class="about-head-text-wrap">
+          <div class="label">UX CASE STUDY - Mobile Ordering App for a Sandwich Shop iST</div>
         </div>
-        <p class="paragraph">full website design and build for a concept team collaboration platform. I have built the website and the blog in Webflow and deployed it with github and netlify</p>
-        <div id="w-node-_1e4ce523-7ab7-265c-7727-0136272e0127-77c0500c" class="div-block-4">
-          <a href="https://letsdofit.de/" target="_blank" class="link">visit live site →</a>
-        </div><img src="../images/screencapture-letsdofit-de-2021-05-30-20_03_47-min.png" loading="lazy" id="w-node-cf732a68-502a-c15f-b47a-2a9f0f771658-77c0500c" alt="" class="website-image">
+        <p id="w-node-_736bac68-4b3b-85d8-5553-9127dc678bae-f96edeff" class="paragraph">Busy workers and commuters lack the time necessary to prepare a meal.</p>
+        <p id="w-node-_02d24f60-103e-431d-f1f8-e5989e89b58a-f96edeff" class="paragraph">iST is a regional sandwich shop located in the suburbs of a metropolitan area. IST strives to deliver healthy, specialty sandwiches  and side dishes. They offer a wide spectrum of competitive pricing. IST targets customers like commuters and workers who lack the time or ability to prepare a family dinner.</p>
+        <div id="w-node-c1499ed2-12df-c667-e8a7-2efb88cb83f8-f96edeff" class="label">The Goal</div>
+        <p id="w-node-_81e3ff74-45d8-148e-dee1-af867b0d51ba-f96edeff" class="paragraph">Design an app for iST Sandwiches that allows users to easily order and pick up fresh, healthy dishes.</p>
+        <div id="w-node-d1c8d695-0a27-2d32-6c4b-5114fa8beefb-f96edeff" class="label">The Problem</div>
       </div>
     </div>
   </div>
