update letsdofit link

--- a/work/project-2.html
+++ b/work/project-2.html
@@ -48,7 +48,7 @@
         </div>
         <p class="paragraph">full website design and build for a concept team collaboration platform. I have built the website and the blog in Webflow and deployed it with github and netlify</p>
         <div id="w-node-_1e4ce523-7ab7-265c-7727-0136272e0127-e10a05a4" class="div-block-4">
-          <a href="https://letsdofit.de/" target="_blank" class="link">visit live site →</a>
+          <a href="https://letsdofitbysuelo.netlify.app/" target="_blank" class="link">visit live site →</a>
         </div><img src="../images/screencapture-letsdofit-de-2021-05-30-20_03_47-min.png" loading="lazy" id="w-node-cf732a68-502a-c15f-b47a-2a9f0f771658-e10a05a4" alt="" class="website-image">
       </div>
     </div>
