--- a/about.html
+++ b/about.html
@@ -70,6 +70,12 @@
           <a href="mailto:suleyman.cihangir79@gmail.com?subject=ux%20portfolio%20mail"
             class="link contact">suleymanxcihangir@gmail.com</a>
           <a href="https://www.linkedin.com/in/suleyman-cihangir" target="_blank" class="link contact">LinkedIn</a>
+          <a href="https://dribbble.com/suelo36th" target="_blank" class="link contact">Dribbble</a>
+          <a href="https://www.behance.net/suelo36th" target="_blank" class="link contact">Behance</a>
+
+          <a href="https://www.instagram.com/suleymanxcihangir" target="_blank" class="link contact">Instagram</a>
+
+          <br>
           <a href="documents/Resume.pdf" target="_blank" class="link contact">resume</a>
         </div>
         <div id="w-node-_785959c8-7d1d-5f7c-f2e0-056f94832da4-6f0a05a1" class="about-head-text-wrap">
